--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <h1>Hello Vue</h1>
-    <div id="app">{{title}} - {{author}} - {{age}}
+    <div id="app">
+        <div v-if="showBooks">
+          <p>{{title}} - {{author}} - {{age}}</p>
+        </div>
 
-        <button v-on:click="age++">Increase age</button>
-        <button v-on:click="age--">Decrease age</button>
-        <div @click="changeTitle('Новое название')">Change Book Title</div>
+        <button @click="toggleShowBooks">
+            <span v-if="showBooks">Hiden Books</span>
+            <span v-else>Show Books</span>
+        </button>
+
+        <div v-show="showBooks">Current showing books</div>
     </div>
     <script src="app.js"></script>
 </body>
