--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <h1>Hello Vue</h1>
     <div id="app">
         <div v-if="showBooks">
-          <p>{{title}} - {{author}} - {{age}}</p>
+            <ul>
+                <li v-for="book in books">
+                    <h3>{{book.title}}</h3>
+                </li>
+            </ul>
         </div>
 
         <button @click="toggleShowBooks">
